--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Olusegun Adeleke <oadeleke123@gmail.com>
+Atta Badu Kwabena <attabadukwabena@gmail.com>
